--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       <div class="paragraph">
       <p>I wrote my first line of code in my computer class when I was about 12. I really enjoyed it but had no idea this is something I could actually do <strong>for a living</strong>.
       <br></br>
-      In <strong>2016</strong>, when I started working as a junior marketing specialist, most of my daily tasks revolved around creating and administrating website content. Mostly using CMS but I got to work with simple HTML as well. I loved what I was doing and decided to find out how could I create websites myself. A few months later I signed up for a 3 months long online course all about frontend development. That's where I learned all about <strong>HTML, CSS, responsive web design and some basic JavaScript and jQuery</strong>. Few weeks in I was sure this was what I wanted to keep on doing.
+      In <strong>2016</strong>, when I started working as a junior marketing specialist, most of my daily tasks revolved around creating and administrating website content. Mostly using CMS but I got to work with simple HTML as well. I loved what I was doing and decided to dive into how could I create websites myself. A few months later I signed up for a 3 months long online course all about frontend development led by <strong><a href="https://skillcrush.com/" target="_blank">Skillcrush</a></strong>. That's where I learned all about <strong>HTML, CSS, responsive web design and some basic JavaScript and jQuery</strong>. After a few weeks into the course I knew I found my passion.
       </div>
       <div class="paragraph">
-      After that I started taking more online courses and started building my own projects for fun. I love learning new things and being able to express my creative a logic side and coding allowed me to do so. That was when I really fell in love with it.
+      After that I started taking more online courses and started building my own projects for fun. Coding allows me to learn new things everyday as well as express my creative side and desire for problem solving.
       <br></br>
-      Recently, I have joined a <strong>Frontend Academy</strong> organized by a company called Inventi. Here I am learning more about the interactive part of frontend development - JavaScript with focus on React.js. Meeting people with the same aspirations and drive really inspires me to keep on creating.
+      Recently, I have finished a <strong>Frontend Academy</strong> organized by an IT company Inventi. The main focus of academy was to learn more about the interactive part of frontend development - JavaScript with focus on React.js and Redux. 
       <br></br>
-      ...and mainly, <strong>I can't wait to learn more and more in my future!</strong></p>
+      Are you interested in finding out more about me? Don't hesitate to <strong><a href="#contact">contact me</a></strong>!</p>
     </div>
   </div>
 </div>
@@ -87,15 +87,21 @@
 
   <div class="dark tech-stack">
     <h2>Tech Stack</h2>
-    <div id="icons">
-      <i class="fab fa-html5"></i>
-      <i class="fab fa-css3-alt"></i>
-      <i class="fab fa-sass"></i>
-      <i class="fab fa-js"></i>
-    </div>
+      <ul class="stack-list">
+        <div>
+          <li>HTML5</li>
+          <li>CSS/SASS</li>
+          <li>Bootstrap</li>          
+        </div>
+        <div>
+          <li>JavaScript</li>
+          <li>jQuery</li>
+          <li>React.js</li>
+        </div>
+      </ul>
   </div>
 
-  <div class="beige contact">
+  <div id="contact" class="beige contact">
     <h2>Let's make some magic together!</h2>
     <div><i class="fas fa-home"></i><p>Prague, Czech republic</p></div>
     <div><i class="fas fa-envelope"></i><p>nemcovaeliskaa@gmail.com</p></div>
